# Qt6_Osciloscope

./: .gitignore  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  MainWindow.cpp  MainWindow.h  OscilloscopeView.cpp  OscilloscopeView.h  README.md  SerialReader.cpp  SerialReader.h  main.cpp
